@@ -37,7 +37,6 @@ import org.apache.cassandra.audit.AuditLogEntryType;
 import org.apache.cassandra.auth.Permission;
 import org.apache.cassandra.config.DatabaseDescriptor;
 import org.apache.cassandra.cql3.CQL3Type;
-import org.apache.cassandra.cql3.CQLStatement;
 import org.apache.cassandra.cql3.ColumnIdentifier;
 import org.apache.cassandra.cql3.Constants;
 import org.apache.cassandra.cql3.QualifiedName;
@@ -197,6 +196,7 @@ public abstract class AlterTableStatement extends AlterSchemaStatement
             tableMetadata.validate();
 
             Guardrails.columnsPerTable.guard(tableBuilder.numColumns(), tableName, false, queryState);
+            newColumns.forEach(c -> c.type.validate(queryState, "Column " + c.name));
 
             return keyspace.withSwapped(keyspace.tables.withSwapped(tableMetadata))
                            .withSwapped(viewsBuilder.build());
